--- a/cuenta.html
+++ b/cuenta.html
@@ -134,7 +134,7 @@
                                 <div class="form-group"><label for="profile-name">Nombre(s)</label><input type="text" id="profile-name" disabled></div>
                                 <div class="form-group"><label for="profile-lastname">Apellidos</label><input type="text" id="profile-lastname" disabled></div>
                             </div>
-                            <div class="form-group"><label for="profile-email">Correo Electrónico</label><input type="email" id="profile-email"></div>
+                            <div class="form-group"><label for="profile-email">Correo Electrónico</label><input type="email" id="profile-email" required></div>
                             <div class="form-group"><label for="profile-whatsapp">Número de WhatsApp</label><input type="tel" id="profile-whatsapp"></div>
                             <hr style="border:0; border-top:1px solid #eee; margin:30px 0;">
                             <button type="submit" class="btn btn-primary">Guardar Cambios</button>
@@ -256,6 +256,18 @@
             renderOrders(userData.orders || []);
         }
 
+        function showNotification(message, isError = false) {
+            const popup = document.getElementById('notificationPopup');
+            popup.textContent = message;
+            if (isError) {
+                popup.classList.add('notification-error');
+            } else {
+                popup.classList.remove('notification-error');
+            }
+            popup.classList.add('show');
+            setTimeout(() => popup.classList.remove('show'), 3000);
+        }
+
         const navLinks = document.querySelectorAll('.account-nav-link');
         const sections = document.querySelectorAll('.account-section');
         navLinks.forEach(link => {
@@ -280,11 +292,45 @@
         if (profileForm) {
             profileForm.addEventListener('submit', async (e) => {
                 e.preventDefault();
-                // Aquí puedes agregar tu lógica de actualización con fetch
-                const popup = document.getElementById('notificationPopup');
-                popup.textContent = "Cambios guardados correctamente.";
-                popup.classList.add('show');
-                setTimeout(() => popup.classList.remove('show'), 3000);
+
+                const updatedEmail = profileEmailInput.value.trim();
+                const updatedWhatsapp = profileWhatsappInput.value.trim();
+
+                if (!updatedEmail) {
+                    showNotification('El correo electrónico es obligatorio.', true);
+                    return;
+                }
+
+                try {
+                    const response = await fetch('https://greenhaul-backend-production.up.railway.app/api/users/update', {
+                        method: 'PUT', // o POST según tu backend
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({
+                            id: userData.id,
+                            email: updatedEmail,
+                            whatsapp: updatedWhatsapp
+                        })
+                    });
+
+                    if (!response.ok) {
+                        const errorData = await response.json();
+                        throw new Error(errorData.message || 'Error al actualizar el usuario.');
+                    }
+
+                    const result = await response.json();
+
+                    // Actualizar localStorage con la nueva info
+                    userData.email = updatedEmail;
+                    userData.whatsapp = updatedWhatsapp;
+                    localStorage.setItem('greenhaulUser', JSON.stringify(userData));
+
+                    populateUI();
+
+                    showNotification('Cambios guardados correctamente.');
+
+                } catch (error) {
+                    showNotification(error.message || 'Error en la conexión con el servidor.', true);
+                }
             });
         }
 
