--- a/productos.html
+++ b/productos.html
@@ -93,111 +93,10 @@
                             <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
                         </div>
                     </div>
-                    <div class="product-card" data-product-id="diablito-renta" data-product-price="15.00">
-                        <div class="product-image">🛒</div>
-                        <div class="product-info">
-                            <h3>Renta de "Diablito"</h3>
-                            <p class="description">Facilita el movimiento de cajas pesadas y muebles. Indispensable para cualquier mudanza.</p>
-                            <div class="quantity-control">
-                                <label for="qty-diablito">Cantidad:</label>
-                                <select id="qty-diablito" class="product-qty form-control">
-                                    <option value="" disabled selected>Selecciona</option>
-                                    <option value="1">1</option>
-                                </select>
-                            </div>
-                            <p class="price">$15.00 <span>/día</span></p>
-                            <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
-                        </div>
                     </div>
-                    <div class="product-card" data-product-id="kit-embalaje" data-product-price="25.00">
-                        <div class="product-image">📦</div>
-                        <div class="product-info">
-                            <h3>Kit de Embalaje Eco</h3>
-                            <p class="description">Incluye papel reciclado, plástico de burbujas biodegradable y cinta de papel.</p>
-                            <div class="quantity-control">
-                                <label for="qty-embalaje">Cantidad:</label>
-                                <select id="qty-embalaje" class="product-qty form-control">
-                                    <option value="" disabled selected>Selecciona</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                </select>
-                            </div>
-                            <p class="price">$25.00 <span>/kit</span></p>
-                            <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
-                        </div>
-                    </div>
-                    <div class="product-card" data-product-id="cubiertas" data-product-price="10.00">
-                        <div class="product-image">🛋️</div>
-                        <div class="product-info">
-                            <h3>Cubiertas Protectoras</h3>
-                            <p class="description">Fundas de tela acolchada para proteger tus sofás y colchones durante el transporte.</p>
-                            <div class="quantity-control">
-                                <label for="qty-cubiertas">Cantidad:</label>
-                                <select id="qty-cubiertas" class="product-qty form-control">
-                                    <option value="" disabled selected>Selecciona</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                </select>
-                            </div>
-                            <p class="price">$10.00 <span>/cubierta</span></p>
-                            <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
-                        </div>
-                    </div>
-                    <div class="product-card" data-product-id="etiquetas" data-product-price="5.00">
-                        <div class="product-image">🏷️</div>
-                        <div class="product-info">
-                            <h3>Etiquetas de Identificación</h3>
-                            <p class="description">Paquetes de etiquetas de colores para marcar tus cajas y agilizar la organización.</p>
-                            <div class="quantity-control">
-                                <label for="qty-etiquetas">Cantidad:</label>
-                                <select id="qty-etiquetas" class="product-qty form-control">
-                                    <option value="" disabled selected>Selecciona</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                </select>
-                            </div>
-                            <p class="price">$5.00 <span>/paquete</span></p>
-                            <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="container footer-content">
-            <div class="footer-info">
-                <h3>greenhauL</h3>
-                <p>Mudanzas sostenibles, sin complicaciones.</p>
-                <p><i class="fas fa-phone-alt"></i> +52 55 1234 5678</p>
-                <p><i class="fas fa-envelope"></i> info@greenhauL.com</p>
-                <p><i class="fas fa-map-marker-alt"></i> Ciudad de México</p>
-            </div>
-            <div class="footer-links">
-                <h3>Enlaces Rápidos</h3>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </div>
-            <div class="footer-social-links">
-                <h3>Síguenos</h3>
-                <div class="social-icons-wrapper">
-                    <a href="#" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="social-icon" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            &copy; <span id="current-year">2025</span> greenhauL. Todos los derechos reservados.
-        </div>
-    </footer>
 
     <div class="cart-modal-overlay" id="cartModalOverlay">
         <div class="cart-modal">
@@ -208,6 +107,10 @@
             <div class="cart-modal-body" id="cartItemsContainer"></div>
             <div class="cart-modal-footer">
                 <div class="cart-summary">
+                    <div class="cart-rental-dates" style="display: none; padding-bottom: 1rem; border-bottom: 1px dashed #ccc; margin-bottom: 1rem;">
+                        <p><strong>Entrega:</strong> <span id="cartStartDate">--</span></p>
+                        <p><strong>Recolección:</strong> <span id="cartEndDate">--</span></p>
+                    </div>
                     <p>Subtotal: <span id="cartSubtotal">$0.00</span></p>
                     <p>Impuestos (16%): <span id="cartTaxes">$0.00</span></p>
                     <h3>Total: <span id="cartTotal">$0.00</span></h3>
@@ -225,6 +128,9 @@
             <p id="notificationText"></p>
         </div>
     </div>
+    
+    <footer class="footer">
+        </footer>
         
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://npmcdn.com/flatpickr/dist/l10n/es.js"></script>
